# decision-intelligence-agent

./: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py
app/agent/: orchestrator.py  tools.py
app/analytics/: anomalies.py  bayes.py  correlations.py  data_quality.py  finance.py  forecasting.py  pipeline_3d.py  profiling.py  segmentation.py  validation.py
app/api/: demo_routes.py  routes.py
app/engineering/: local_pipeline.py
app/llm/: answer_builder.py  factory.py
app/rag/: chunker.py  embedder.py  factory.py  ingestion.py  loaders.py  prompt_builder.py  rag_routes.py  retriever.py  schemas.py  service.py  vector_store.py
app/static/: index.html
data/: test_business.csv
data/docs/: test_pipeline_manual.txt
decision-intelligence-n8n/: docker-compose.yml
decision-intelligence-n8n/n8n_data/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
decision_intelligence_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CODE_AND_TOOLS_GUIDE.md  FULL_SYSTEM_ARCHITECTURE.md  LOW_LEVEL_CODE_REFERENCE.md  METHODOLOGY_NOTES.md  WORKFLOW_IMPROVEMENT_REPORT.md
files_for_demo/: DEMO_FILE_GUIDE.md  coffee_quality_context.txt  coffee_quality_demo.csv  finance_market_context.txt  finance_market_demo.csv  healthcare_admissions_demo.csv  healthcare_context.txt  pipeline_inspection_context.md  pipeline_multi_defect_context.md  sample_pipe.xyz  sample_pipeline_context.txt
scripts/: run_local.ps1  setup_local.ps1
tests/: test_core_tools.py  test_orchestrator_api.py
(+27 files in other folders)
