[project]
name = "decision-intelligence-agent"
version = "0.3.0"
description = "AI-driven decision intelligence agent for general, finance, healthcare, and pipeline analytics."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "uvicorn>=0.29",
  "duckdb>=1.0",
  "open3d>=0.18",
  "statsmodels>=0.14",
  "pymc>=5.0",
  "prophet>=1.1",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
finance = [
  "PyPortfolioOpt>=1.5",
  "vectorbt>=0.26",
]
healthcare = [
  "lifelines>=0.29",
  "scikit-survival>=0.23",
  "econml>=0.15",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
